--- a/Python NetMon/config/config.ini
+++ b/Python NetMon/config/config.ini
@@ -1,8 +1,17 @@
 [DEFAULT]
-refreshinterval = 30
-logfile = device_status_log.txt
+version = 1.1.3.1
+hyperlink = https://tinyurl.com/PyNetMon
+developer = Chris Collins
+
+[Log]
+log_directory = log
+logfile = log_file.txt
+archieve_directory = log/archieve
+
+[Network]
+refreshinterval = 180
 
 [PING]
 attempts = 5
-timeout = 20
+timeout = 40
 
